...
                android:layout_height="wrap_content"
                android:src="@drawable/nutella_pie"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resize_mode="fill"
                android:visibility="visible"/>

        </RelativeLayout>
...
                    android:secondaryProgressTint="@color/textDarkSecondary" />

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/step_next"
                android:textSize="@dimen/stepper_font_size"
                android:background="@android:color/transparent"
                android:textColor="@color/textDarkSecondary"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
