...
            android:layout_centerVertical="true"
            style="@android:style/Widget.ProgressBar"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>
...
