...
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_step_ingredients_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </FrameLayout>
...
